--- a/ExtraCreditExam.html
+++ b/ExtraCreditExam.html
@@ -207,9 +207,10 @@ h3{
         <p id="results"></p>
     </div>
     
-    
 
     <script>
+        var audio = new Audio('use.mp3');
+        audio.play();
         var score = 0;
         $("#q2").hide(0);
         $("#q3").hide(0);
